--- a/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
+++ b/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
@@ -9,25 +9,25 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ## Overview
 
-For quoting a passage of text or speech from another source.
+For quoting a passage of text or speech, the author, and the source. 
 
 ## Default
 
-Displays the text content and attribution of the blockquote in purple text on a white background. 
+Displays the blockquote text, author, and source.
 
 <Canvas withSource="none">
   <Story height={170} id="components-blockquote" />
 </Canvas>
 
 ```html
-<blockquote class="blockquote blockquote--light">
-    <div class="blockquote__body">
-        <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
-    </div>
-    <div class="blockquote__footer">
-        <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
-    </div>
-</blockquote>
+<figure class="blockquote">
+    <blockquote class="blockquote__body">
+        <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
+    </blockquote>
+    <figcaption class="blockquote__footer">
+        —Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite>
+    </figcaption>
+</figure>
 ```
 
 ## Variants
@@ -49,19 +49,8 @@ Displays the text content and attribution of the blockquote in purple text on a 
 </blockquote>
 ```
 
-### Boxed
+## How and when to use
+The quoted content is contained in the ```blockquote``` element, and the author and source are placed outside that element so they do not become a part of the quoted content. If referencing the source of the quote, the title of the source should be placed in a ```cite``` element. This element should only contain the source not the author as the author is not considered the source according to the specifcations of the ```cite``` element. If no author or source is required, the ```figcaption``` element can be omitted. 
 
-<Canvas withSource="none">
-  <Story id="components-blockquote--blockquote-boxed" />
-</Canvas>
 
-```html
-<blockquote class="blockquote blockquote--dark blockquote--boxed">
-    <div class="blockquote__body">
-        <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
-    </div>
-    <div class="blockquote__footer">
-        <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
-    </div>
-</blockquote>
-```
+## Accessibility
