--- a/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
+++ b/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
@@ -3,17 +3,17 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Blockquote
 
-<StatusBadge.Review /><StatusBadge.ReviewDoc />
+<StatusBadge.Stable /><StatusBadge.StableDoc />
 
 <a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
 
 ## Overview
 
-For quoting a passage of text or speech, the author, and the source. 
+The blockquote component is used for quoting a passage of text or speech, the author, and the source. 
 
 ## Default
 
-Displays the blockquote text, author, and source.
+Displays the blockquote text, author, and source in purple text to be displayed on light backgrounds such as white or light-grey.
 
 <Canvas withSource="none">
   <Story height={170} id="components-blockquote" />
@@ -32,25 +32,27 @@ Displays the blockquote text, author, and source.
 
 ## Variants
 
-### Dark backgrounds
+### Light 
+
+This variant changes the colour of the blockquote text to white so it can be displayed on darker backgrounds such as UQ purple. 
 
 <Canvas withSource="none">
-  <Story height={170} id="components-blockquote--blockquote-dark" />
+  <Story height={170} id="components-blockquote--blockquote-light" />
 </Canvas>
 
 ```html
-<blockquote class="blockquote blockquote--dark">
-    <div class="blockquote__body">
-        <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
-    </div>
-    <div class="blockquote__footer">
-        <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
-    </div>
-</blockquote>
+<figure class="blockquote blockquote--light">
+    <blockquote class="blockquote__body">
+        <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
+    </blockquote>
+    <figcaption class="blockquote__footer">
+        —Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite>
+    </figcaption>
+</figure>
 ```
 
 ## How and when to use
-The quoted content is contained in the ```blockquote``` element, and the author and source are placed outside that element so they do not become a part of the quoted content. If referencing the source of the quote, the title of the source should be placed in a ```cite``` element. This element should only contain the source not the author as the author is not considered the source according to the specifcations of the ```cite``` element. If no author or source is required, the ```figcaption``` element can be omitted. 
+The quoted content is contained in the ```blockquote``` element, and the author and source are placed outside that element so they do not become a part of the quoted content. If referencing the source of the quote, the title of the source should be placed in a ```cite``` element. This element should only contain the title of the source not the author as the author is not considered the source according to the specifcations of the ```cite``` element. If no author or source is required, the ```figcaption``` element can be omitted. 
 
 
 ## Accessibility
