add accesibility docs

--- a/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
+++ b/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
@@ -52,7 +52,9 @@ This variant changes the colour of the blockquote text to white so it can be dis
 ```
 
 ## How and when to use
-The quoted content is contained in the ```blockquote``` element, and the author and source are placed outside that element so they do not become a part of the quoted content. If referencing the source of the quote, the title of the source should be placed in a ```cite``` element. This element should only contain the title of the source not the author as the author is not considered the source according to the specifcations of the ```cite``` element. If no author or source is required, the ```figcaption``` element can be omitted. 
+The quoted content is contained in the ```blockquote``` element. The author and source are placed outside that element so they do not become a part of the quoted content. If referencing the source of the quote, the source title should be placed in a ```cite``` element. This element should only contain the title of the source not the author as the author is not considered the source according to the specifcations of the ```cite``` element. 
 
+The blockquote element represents the text is a quotation from another source. It should not be used for visual styling of other content.
 
 ## Accessibility
+The ```blockquote``` element is a semantic element and does not require additonal accessibility labels. 
