updated examples, fixed markup example

--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -17,7 +17,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <div class="uq-hero">  
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-      <h1 class="uq-hero__title">>Page title</h1>
+      <h1 class="uq-hero__title">Page title</h1>
     </div>
   </div>
 </div>
