--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -33,10 +33,10 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <div class="uq-hero uq-hero--feature-image">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
-      <img src="/images/hero/hero-example--small.jpg" alt="A postgraduate student using a laptop" />
+      <img src="/images/hero/hero-example--small.jpg" alt="" role="presentation" />
     </div>
     <div class="uq-hero__image--large">
-      <img src="/images/hero/hero-example--large.jpg" alt="A postgraduate student using a laptop" />
+      <img src="/images/hero/hero-example--large.jpg" alt="" role="presentation" />
     </div>
   </div>
   <div class="uq-hero__content">
