update docs for variants

--- a/packages/storybook-html/src/components/loading-spinner/loading-spinner.docs.mdx
+++ b/packages/storybook-html/src/components/loading-spinner/loading-spinner.docs.mdx
@@ -35,7 +35,7 @@ Changes the colour of the component to white so it can be used on darker backgro
 </Canvas>
 
 ```html
-<div class="uq-loading-spinner--light" role="alert" aria-live="assertive">
+<div class="uq-loading-spinner uq-loading-spinner--light" role="alert" aria-live="assertive">
   <span>Loading...</span>
 </div>
 ```
@@ -48,7 +48,7 @@ Reduces the component to half the size of the default.
 </Canvas>
 
 ```html
-<div class="uq-loading-spinner--small" role="alert" aria-live="assertive">
+<div class="uq-loading-spinner uq-loading-spinner--small" role="alert" aria-live="assertive">
   <span>Loading...</span>
 </div>
 ```
