--- a/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
@@ -2,61 +2,20 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Breadcrumb
-<StatusBadge.Review /><StatusBadge.ReviewDoc />
+<StatusBadge.Stable /><StatusBadge.StableDoc />
+
+<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
 
 ## Overview
 
-Breadcrumbs are horizontally arranged text links separated by an arrow icon (arrow-right.svg). They are typically described using at least their URL and their name, and typically ending with the current page.
+Breadcrumbs are a horizontal list of links used to indicate the current page location within the site navigation hierarchy. Page links are separated by a chevron icon which indicates the level of that page relative to the page links beside it. 
 
-The arrow icon indicates the level of that page relative to the page links beside it. It is displayed via background-image data URIs in CSS.
-
-## Breadcrumb levels
-
-### One level
-
-This would be one level deeper than the home page.
+## Default
+Displays a list of links indicating the page levels before the current page. The current page is not included and a chevron icon is displayed between the page levels when there are more than two page levels in the list. 
 
 <Canvas withSource="none">
-  <Story id="components-breadcrumb--breadcrumb-one-level" />
+  <Story id="components-breadcrumb--breadcrumb" />
 </Canvas>
-
-### Multi level
-
-In a multi level breadcrumb, there will be more than one text link.
-
-<Canvas withSource="none">
-  <Story id="components-breadcrumb--breadcrumb-multi-level" />
-</Canvas>
-
-
-
-## Breadcrumb structures
-
-### Basic structure
-
-```html
-<nav aria-label="breadcrumb">
-  <ol class="uq-breadcrumb">
-    <li class="uq-breadcrumb__item uq-breadcrumb__item--home">
-      <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
-    </li>
-    <li class="uq-breadcrumb__item">
-      <a class="uq-breadcrumb__link" href="/information-and-services">Information and services</a>
-    </li>
-    <li class="uq-breadcrumb__item">
-      <a class="uq-breadcrumb__link" href="/information-and-services/human-resources">Human resources</a>
-    </li>
-  </ol>
-</nav>
-```
-
-### Schema added structure
-
-#### Why add schema ? 
-
-Web pages have an underlying meaning that people understand when they read the web pages. But search engines have a limited understanding of what is being discussed on those pages. By adding additional tags to the HTML of your web pages—tags that say, "Hey, this information describes this specific movie, or place, or person, or video"—you can help search engines and other applications better understand your content and display it in a useful, relevant way. Microdata (itemscope, itemtype, itemprop) is a set of tags, introduced with HTML5, that allows you to do this.
-
-For a more thorough read on schema, go to https://schema.org/
 
 ```html
 <nav aria-label="uq-breadcrumb">
@@ -70,21 +29,25 @@ For a more thorough read on schema, go to https://schema.org/
       <meta itemprop="position" content="2">
     </li>
     <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/human-resources">Human resources</a>
+      <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/internet-and-wifi">Internet and wifi</a>
       <meta itemprop="position" content="3">
     </li>
   </ol>
 </nav>
 ```
 
-## Accessibility
-
-For accessibility add aria-label="breadcrumb" to the nav element that overlaps the breadcrumb component.
-
-## Truncation in breadcrumb text links
-
-The breadcrumb link text is truncated and ellipsed (...) when the text is too long. 
+### Truncation
+The breadcrumb link text is truncated and ellipsed (...) when the text is longer than a set width. 
 
 <Canvas withSource="none">
   <Story id="components-breadcrumb--breadcrumb-truncation" />
 </Canvas>
+
+## How and when to use
+* The breadcrumb component is typically location based to represent the site's navigational hierarchy as opposed to path based to illustrate a navigation trail. 
+* The component displays on a page once a user has navigated away from the home page to provide a navigation path back to the home and parent level pages. 
+* The breadcrumb should not include a link to the current page.
+* Search engines have a limited understanding of content on web pages. By adding schema microdata tags to the breadcrumb component, you can help search engines and other applications better understand the content and display it in a useful and relevant way. For further information on schema, go to https://schema.org/
+
+## Accessibility
+For accessibility add ```aria-label="breadcrumb"``` to the ```nav``` element that wraps the breadcrumb component.
