updated css to scss

--- a/packages/storybook-html/src/components/accordion/accordion.docs.mdx
+++ b/packages/storybook-html/src/components/accordion/accordion.docs.mdx
@@ -83,10 +83,10 @@ The subtitle allows for a secondary context. Typically the primary title should 
 
 ### Compact
 
-A smaller more compact version. 
+A smaller more compact version. Used as a support class for more complex interfaces mixing components. For general content use the standard size accordion.
 
 <Canvas withSource="none">
-  <Story height={300} id="components-accordion--is-compact" />
+  <Story height={200} id="components-accordion--is-compact" />
 </Canvas>
 
 ```html
