fixed icon naming on tabs

--- a/packages/storybook-html/src/components/tabs/tabs.docs.mdx
+++ b/packages/storybook-html/src/components/tabs/tabs.docs.mdx
@@ -78,7 +78,7 @@ hierarchical level.
 <div class="uq-tabs uq-tabs--outline">
   <div class="uq-tabs__tab-list" role="tablist" aria-label="Tab List">
     <button class="uq-tabs__tab uq-tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">
-        <span class="uq-icon uq-icon--search"></span> Tab 1
+        <span class="uq-icon uq-icon--common--search"></span> Tab 1
     </button>
     ...
 ```
