--- a/packages/storybook-html/src/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/get-started.story.mdx
@@ -111,11 +111,11 @@ Instructions coming soon after we get our house in order.
 | @uqds/breadcrumb    | Core, Icon       |                                                                                                 |
 | @uqds/button        | Core             |                                                                                                 |
 | @uqds/card          | Core             |                                                                                                 |
-| @uqds/footer        | Core, Grid       |                                                                                                 |
+| @uqds/footer-legacy | Core, Grid       |                                                                                                 |
 | @uqds/form          | Core             |                                                                                                 |
 | @uqds/grid          | Core             |                                                                                                 |
 | @uqds/grid-menu     | Core, Icon       |                                                                                                 |
-| @uqds/header        | Core, Grid, Icon | --JS--                                                                                          |
+| @uqds/header-legacy | Core, Grid, Icon | --JS--                                                                                          |
 | @uqds/hero          | Core, Grid       |                                                                                                 |
 | @uqds/icon          | Core             |                                                                                                 |
 | @uqds/lists         | Core             |                                                                                                 |
