--- a/packages/storybook-html/src/components/footer-legacy/footer.docs.mdx
+++ b/packages/storybook-html/src/components/footer-legacy/footer.docs.mdx
@@ -3,7 +3,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Global footer
 
-<StatusBadge.Review /><StatusBadge.DraftDoc />
+<StatusBadge.Deprecated /><StatusBadge.DraftDoc />
 
 ## Overview
 
@@ -12,7 +12,7 @@ The global footer provides a consistent branding and navigational element across
 ## Default example
 
 <Canvas withSource="none" withToolbar>
-  <Story height={339} id="components-footer--footer" />
+  <Story height={339} id="legacy-footer--footer" />
 </Canvas>
 
 ```html
