changed new- to uq-

--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -25,28 +25,28 @@ using [*UQ Search*](https://www.uq.edu.au/search).
 </Canvas>
 
 ```html
-    <header class="new-header">
-      <div class="new-header__wrapper">
-        <div class="new-header__menu-toggle">
+    <header class="uq-header">
+      <div class="uq-header__wrapper">
+        <div class="uq-header__menu-toggle">
           <button type="button" class="main-nav__toggle main-nav__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
         </div>
-        <div class="new-header__logo">
+        <div class="uq-header__logo">
           <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
             <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
           </a>
         </div>
-        <div class="new-header__search-toggle">
+        <div class="uq-header__search-toggle">
           <button class="main-nav__toggle main-nav__search-toggle">
              <div class="search-toggle__label">Search</div>
           </button>
         </div>
         
-        <div class="new-header__main-nav-wrapper">
-          <nav class="new-header__main-nav">
-            <ul class="new-header__main-nav-list">
-              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
-                <div class="new-header__megamenu-wrapper">
-                  <div class="new-header__megamenu">
+        <div class="uq-header__main-nav-wrapper">
+          <nav class="uq-header__main-nav">
+            <ul class="uq-header__main-nav-list">
+              <li><a class="uq-header__main-nav-link main-nav-link--has-dropdown" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
+                <div class="uq-header__megamenu-wrapper">
+                  <div class="uq-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Study overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
@@ -88,9 +88,9 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                   </div>
               </div>
               </li>
-              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
-                <div class="new-header__megamenu-wrapper">
-                  <div class="new-header__megamenu">
+              <li><a class="uq-header__main-nav-link main-nav-link--has-dropdown" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
+                <div class="uq-header__megamenu-wrapper">
+                  <div class="uq-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Research overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
@@ -125,9 +125,9 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                   </div>
                 </div>
               </li>
-              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
-                <div class="new-header__megamenu-wrapper">
-                  <div class="new-header__megamenu">
+              <li><a class="uq-header__main-nav-link main-nav-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
+                <div class="uq-header__megamenu-wrapper">
+                  <div class="uq-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
@@ -162,9 +162,9 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                   </div>
                 </div>
               </li>
-              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
-                <div class="new-header__megamenu-wrapper">
-                  <div class="new-header__megamenu">
+              <li><a class="uq-header__main-nav-link main-nav-link--has-dropdown" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
+                <div class="uq-header__megamenu-wrapper">
+                  <div class="uq-header__megamenu">
                     <a href="#" class="megamenu__overview-link">About overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
@@ -197,8 +197,8 @@ using [*UQ Search*](https://www.uq.edu.au/search).
           <button type="button" class="btn slide-menu__control" data-action="close">Close</button>
         </div> -->
         <ul>
-          <li  class="new-header__newglobal-nav-item">
-            <a  class="new-header__newglobal-nav-link" href="#">Study</a>
+          <li  class="uq-header__newglobal-nav-item">
+            <a  class="uq-header__newglobal-nav-link" href="#">Study</a>
             <ul>
               <li>
                 <a href="#">Study overview</a>
@@ -232,8 +232,8 @@ using [*UQ Search*](https://www.uq.edu.au/search).
               </li>
             </ul>
           </li>
-          <li  class="new-header__newglobal-nav-item">
-            <a  class="new-header__newglobal-nav-link" href="#">Research</a>
+          <li  class="uq-header__newglobal-nav-item">
+            <a  class="uq-header__newglobal-nav-link" href="#">Research</a>
             <ul>
               <li>
                 <a href="#">Research overview</a>
@@ -260,8 +260,8 @@ using [*UQ Search*](https://www.uq.edu.au/search).
               </li>
             </ul>
           </li>
-          <li  class="new-header__newglobal-nav-item">
-            <a class="new-header__newglobal-nav-link" href="#">Partners and community</a> 
+          <li  class="uq-header__newglobal-nav-item">
+            <a class="uq-header__newglobal-nav-link" href="#">Partners and community</a> 
             <ul>
               <li>
                 <a href="#">Partners and community overview</a>
@@ -288,8 +288,8 @@ using [*UQ Search*](https://www.uq.edu.au/search).
               </li>
             </ul>
           </li>
-          <li class="new-header__newglobal-nav-item">
-            <a class="new-header__newglobal-nav-link" href="#">About</a>
+          <li class="uq-header__newglobal-nav-item">
+            <a class="uq-header__newglobal-nav-link" href="#">About</a>
             <ul>
               <li>
                 <a href="#">About overview</a>
@@ -307,54 +307,54 @@ using [*UQ Search*](https://www.uq.edu.au/search).
               <li><a href="#">Careers at UQ</a></li>
             </ul>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">UQ home</a>
+          <li  class="uq-header__black-nav-item">
+            <a class="uq-header__black-nav-link" href="#">UQ home</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">News</a>
+          <li  class="uq-header__black-nav-item">
+            <a class="uq-header__black-nav-link" href="#">News</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">Events</a>
+          <li  class="uq-header__black-nav-item">
+            <a class="uq-header__black-nav-link" href="#">Events</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">Give</a>
+          <li  class="uq-header__black-nav-item">
+            <a class="uq-header__black-nav-link" href="#">Give</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">Contact</a>
+          <li  class="uq-header__black-nav-item">
+            <a class="uq-header__black-nav-link" href="#">Contact</a>
           </li>  
       </nav>
-      <div class="new-header__search">
-        <div class="new-header__search-container">
+      <div class="uq-header__search">
+        <div class="uq-header__search-container">
           <form>
             <fieldset>
-              <div class="new-header__search-query">
+              <div class="uq-header__search-query">
                 <label for="edit-q" class="visually-hidden">Search term</label>
-                <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="new-header__search-query-input">
-                <span class="new-header__search-query-button">
-                  <input type="submit" name="op" value="Search" class="new-header__search-query-submit">
+                <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="uq-header__search-query-input">
+                <span class="uq-header__search-query-button">
+                  <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
                 </span>
               </div>
             </fieldset>
           </form>
         </div>
       </div>
-      <div class="new-header__black-nav-wrapper">
-        <nav class="new-header__black-nav">
-          <ul class="new-header__black-nav-list">
-              <li class="new-header__black-nav-item">
-                <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'home'});">UQ home</a>
+      <div class="uq-header__black-nav-wrapper">
+        <nav class="uq-header__black-nav">
+          <ul class="uq-header__black-nav-list">
+              <li class="uq-header__black-nav-item">
+                <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'home'});">UQ home</a>
               </li>
-              <li class="new-header__black-nav-item">
-                  <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
+              <li class="uq-header__black-nav-item">
+                  <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
               </li>
-              <li class="new-header__black-nav-item">
-                  <a href="https://www.uq.edu.au/events/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
+              <li class="uq-header__black-nav-item">
+                  <a href="https://www.uq.edu.au/events/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
               </li>
-              <li class="new-header__black-nav-item">
-                  <a href="https://alumni.uq.edu.au/giving/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
+              <li class="uq-header__black-nav-item">
+                  <a href="https://alumni.uq.edu.au/giving/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
               </li>
-              <li class="new-header__black-nav-item">
-                <a href="https://uq.edu.au/departments/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
+              <li class="uq-header__black-nav-item">
+                <a href="https://uq.edu.au/departments/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
               </li>
           </ul>
         </nav>
