updated status of header and footer

--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -3,7 +3,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Global header
 
-<StatusBadge.Stable /><StatusBadge.StableDoc />
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 ## Overview
 
