--- a/packages/storybook-html/src/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/src/components/footer/footer.docs.mdx
@@ -3,7 +3,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Global footer
 
-<StatusBadge.Review /><StatusBadge.DraftDoc />
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 ## Overview
 
