--- a/packages/storybook-html/src/components/icon/icon.docs.mdx
+++ b/packages/storybook-html/src/components/icon/icon.docs.mdx
@@ -87,9 +87,7 @@ URL encoded string.
 @use "@uqds/icon/src/scss/global" as icon-constants;
 
 .your-class {
-  background-image: url(icon-constants.get-icon(
-    "agriculture-and-environment--agriculture-machine-tractor"
-  ));
+  background-image: url('icon-constants.get-icon("agriculture-and-environment--agriculture-machine-tractor")');
 }
 ```
 
@@ -104,7 +102,7 @@ Here's an example using the `$color` parameter.
 
 .your-class {
   ...
-  background-image: url(icon-constants.get-icon("agriculture-and-environment--agriculture-machine-tractor", core.$uq-green));
+  background-image: url('icon-constants.get-icon("agriculture-and-environment--agriculture-machine-tractor", core.$uq-green)');
   ...
 }
 ```
